# Chat-bot

./: README.md  gemini_chatbot.ipynb  pyproject.toml
qachat/: main_chat.py
